--- a/backbone/backbone-first/app/views/main.scala.html
+++ b/backbone/backbone-first/app/views/main.scala.html
@@ -28,5 +28,5 @@
     	<h1>Music Library</h1>
     	<ul class="albums"></ul>
     </script>
-    <script type="text/javascript" src="@routes.Assets.at("javascript/free.js")"></script>
+    <script type="text/javascript" src="@routes.Assets.at("javascript/main.js")"></script>
 </html>
